Adding <section> and 1 <p>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>GitHub Practice</title>
     </head>
     <body>
-
+        <section>
+            <p>Forage PBR&B kogi Pinterest, four loko Godard 3 wolf moon literally gastropub selfies trust fund farm-to-table. Letterpress Williamsburg wolf shabby chic Helvetica, Godard trust fund PBR&B Tonx artisan brunch twee hashtag. Quinoa craft beer VHS Wes Anderson McSweeney's, next level Portland irony. Fanny pack Intelligentsia meh kitsch jean shorts Brooklyn. Shoreditch Truffaut mlkshk, beard irony viral 8-bit Williamsburg narwhal swag hella Kickstarter butcher gastropub farm-to-table. Tousled distillery Etsy keytar Blue Bottle gastropub ethical Schlitz. Vice twee gentrify lomo High Life, yr semiotics bicycle rights.</p>
+        </section>
 
     </body>
 </html>
