Adding <section> and <p>

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <section>
             <p>Forage PBR&B kogi Pinterest, four loko Godard 3 wolf moon literally gastropub selfies trust fund farm-to-table. Letterpress Williamsburg wolf shabby chic Helvetica, Godard trust fund PBR&B Tonx artisan brunch twee hashtag. Quinoa craft beer VHS Wes Anderson McSweeney's, next level Portland irony. Fanny pack Intelligentsia meh kitsch jean shorts Brooklyn. Shoreditch Truffaut mlkshk, beard irony viral 8-bit Williamsburg narwhal swag hella Kickstarter butcher gastropub farm-to-table. Tousled distillery Etsy keytar Blue Bottle gastropub ethical Schlitz. Vice twee gentrify lomo High Life, yr semiotics bicycle rights.</p>
         </section>
-
+        <section>
+            <p>Chia semiotics Williamsburg actually Truffaut normcore. McSweeney's fap gastropub, DIY seitan mlkshk readymade 8-bit before they sold out disrupt kogi XOXO gluten-free wolf. McSweeney's American Apparel squid, hoodie drinking vinegar bicycle rights normcore meggings brunch letterpress. Helvetica literally tote bag Carles meggings DIY. Marfa DIY selfies direct trade bespoke, single-origin coffee pour-over fap PBR&B. Beard cray normcore, quinoa sartorial American Apparel bitters Helvetica Etsy YOLO hashtag salvia Austin meh roof party. Retro Thundercats fixie, semiotics vinyl authentic Neutra viral.</p>
+        </section>
     </body>
 </html>
